table layout tuning and remove stderr if dir exists

--- a/ui/NextBuses.wdgt/Quaiche.css
+++ b/ui/NextBuses.wdgt/Quaiche.css
@@ -8,6 +8,11 @@ body {
    font-weight: bold;
 }
 
+.busTable th { 
+   text-align:left; 
+   font-style:italic; 
+}
+
 .theBeef {
     font: 14px "Lucida Grande";
     font-weight: bold;
